Fix old language syntax, upgrade to JDK11, upgrade maven dependencies